// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshots matches default variant 1`] = `
<DocumentFragment>
  <div
    class="aje-dropdown is-medium has-error"
  >
    <div
      class="aje-combobox"
    >
      <label
        class="aje-label"
        for="Combobox-4002622434181609"
      >
        Text Label
      </label>
      <p
        class="aje-label--message"
      >
        message
      </p>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="Combobox-7093062952917764"
        class="aje-combobox__input is-searchable"
        id="Combobox-1477414593289298"
        role="combobox"
      >
        <input
          aria-autocomplete="both"
          aria-controls="Combobox-7093062952917764"
          aria-describedby="Combobox-500790602956198"
          aria-labelledby="Combobox-6416608466361828"
          id="Combobox-4002622434181609"
          type="text"
          value="content"
        />
      </div>
      <div
        class="aje-popover is-full aje-popover-bottom-left"
      >
        <ul
          aria-labelledby="Combobox-6416608466361828"
          class="aje-combobox__menu"
          id="Combobox-7093062952917764"
          role="listbox"
        />
      </div>
    </div>
    <p
      class="aje-label--error"
      id="Combobox-500790602956198"
    >
      some error
    </p>
  </div>
</DocumentFragment>
`;

exports[`matches snapshots matches floating variant 1`] = `
<DocumentFragment>
  <div
    class="aje-dropdown--floating is-medium has-error"
  >
    <div
      class="aje-combobox"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="Combobox-7093062952917764"
        class="aje-combobox__input is-searchable"
        id="Combobox-1477414593289298"
        role="combobox"
      >
        <input
          aria-autocomplete="both"
          aria-controls="Combobox-7093062952917764"
          aria-describedby="Combobox-500790602956198"
          aria-labelledby="Combobox-6416608466361828"
          id="Combobox-4002622434181609"
          type="text"
          value="content"
        />
      </div>
      <div
        class="aje-popover is-full aje-popover-bottom-left"
      >
        <ul
          aria-labelledby="Combobox-6416608466361828"
          class="aje-combobox__menu"
          id="Combobox-7093062952917764"
          role="listbox"
        />
      </div>
      <label
        class=""
        for="Combobox-4002622434181609"
      >
        Text Label
      </label>
    </div>
    <p
      class="aje-label--message"
    >
      message
    </p>
    <p
      class="aje-label--error"
      id="Combobox-500790602956198"
    >
      some error
    </p>
  </div>
</DocumentFragment>
`;
